_sass/base.scss
/* ... */
/**
 * Our Solution Page
 */
#our-solution-content {
  background-color: map-get($primary-colors, "cream");

  #content-box-1 {
    margin-top: 72px;
    gap: 144px;

    @include media-breakpoint-down(lg) {
      gap: 40px;
    }

    @include media-breakpoint-down(md) {
      gap: 0px;
      margin-top: 80px;
    }

    .start-box {
      max-width: 50%;
      padding-left: 140px;

      @include media-breakpoint-down(lg) {
        padding-left: 20px;
      }

      @include media-breakpoint-down(md) {
        margin-top: 36px;
        max-width: none;
        padding-right: 20px;
      }

      p {
        margin-top: 24px;

        &.tagline {
          margin-top: 0px;
          margin-bottom: 8px;
        }
      }

      h1 {
        margin-top: 0px;
      }
    }

    .end-box img {
      border-bottom-left-radius: 80px;
      max-height: 830px;

      @include media-breakpoint-down(md) {
        border-bottom-left-radius: 0px;
        max-height: none;
        width: 100%;
      }
    }
  }

  #content-box-2 p {
    font-family: Gilroy, sans-serif;
    font-size: 32px;
    font-style: normal;
    font-weight: 600;
    letter-spacing: -0.3px;
    line-height: 40px;
    padding: 48px 0;

    @include media-breakpoint-down(md) {
      font-size: 24px;
      line-height: 36px;
      width: auto;
    }
  }

  #content-box-3 {
    margin-bottom: 72px;

    @include media-breakpoint-down(md) {
      background-color: map-get($primary-colors, "black");
      margin-bottom: 0px;
    }

    .a-common-need {
      background-color: map-get($primary-colors, "black");
      border-radius: 40px;

      @include media-breakpoint-down(md) {
        padding-bottom: 80px;
        padding-top: 80px;
      }

      @include media-breakpoint-up(md) {
        padding-bottom: 96px;
        padding-top: 88px;
      }

      h2 {
        color: map-get($primary-colors, "white");
        margin-top: 0px;

        @include media-breakpoint-down(md) {
          margin-bottom: 48px;
        }
      }

      p {
        color: map-get($primary-colors, "white");
        font-family: "Noto Sans", sans-serif;
        font-size: 18px;
        font-style: normal;
        font-weight: 400;
        line-height: 24px;
        margin-bottom: 0px;
        margin-top: 0px;

        &.stat-label {
          color: map-get($secondary-colors, "light-green");
          font-family: Gilroy, sans-serif;
          font-weight: 600;
          font-size: 48px;
          line-height: 64px;
        }

        &.title {
          font-family: Gilroy, sans-serif;
          font-size: 18px;
          font-style: normal;
          font-weight: 700;
          line-height: 24px;
          margin-top: 16px;
        }
      }

      .icon {
        height: 72px;
        width: 72px;
      }

      .call-to-action {
        margin-top: 80px;

        @include media-breakpoint-down(md) {
          margin-top: 48px;
        }
      }

      .m-margin-top {
        @include media-breakpoint-down(md) {
          margin-top: 48px;
        }
      }
    }
  }

  #content-box-4 {
    margin-bottom: 72px;

    .audio-bg {
      background-color: map-get($primary-colors, "white");
      border-radius: 40px;
      width: 40vw;
      height: 40vw;
      max-width: inherit !important;
      margin: 48px 0;

      @include media-breakpoint-down(md) {
        width: 80vw;
        height: 80vw;
      }
    }

    .audio-div {
      height: 100%;
    }

    .audio-icon {
      max-width: 300px;
    }
  }

  #content-box-5 {
    background-color: map-get($primary-colors, "white");
    padding-top: 128px;

    @include media-breakpoint-down(md) {
      padding-top: 88px;
    }

    h2 {
      margin-top: 0px;
      margin-bottom: 72px;

      @include media-breakpoint-down(md) {
        margin-bottom: 48px;
      }
    }

    .feature-list {
      @include media-breakpoint-up(md) {
        padding-left: 184px;
        padding-right: 184px;
      }
    }
  
    .item {
      margin-bottom: 48px;
      width: 100%;

      @include media-breakpoint-up(md) {
        width: 33.33%;
      }

      img {
        margin-bottom: 16px;
      }
    }

    .feature-label {
      font-family: Gilroy, sans-serif;
      font-weight: 700;
      font-size: 18px;
      line-height: 24px;
      margin-bottom: 8px;
    }

    .feature-description {
      font-family: "Noto Sans", sans-serif;
      font-weight: 400;
      font-size: 16px;
      line-height: 24px;
    }
  }

  #content-box-6 {
    margin-bottom: 96px;

    @include media-breakpoint-down(md) {
      padding: 20px;
    }

    .case-study {
      width: 100%;

      @include media-breakpoint-down(md) {
        margin-top: 32px;
      }
    }

    .case-study-img {
      aspect-ratio: 1 / 1;
      border-radius: 40px;
      object-fit: cover;
    }

    .accordion-button {
      padding: 0px 24px;
      color: map-get($primary-colors, "black");
      background-color: transparent;
      font-family: Gilroy, sans-serif;
      font-weight: 700;
      font-size: 18px;
      line-height: 24px;
    }

    .accordion-body {
      padding: 24px;
    }
  }

  #question-hero {
    padding: 80px;

    @include media-breakpoint-down(md) {
      padding: 36px 20px;
      min-height: 400px;
    }

    h2 {
      color: map-get($primary-colors, "white");
      margin-top: 0px;
    }

    p {
      color: map-get($primary-colors, "white");

      &.tagline {
        color: map-get($secondary-colors, "light-green");
        margin-bottom: 8px;
      }
    }

    .hero-content {
      border-left: 1px solid map-get($secondary-colors, "grey");
      max-width: 600px;
      padding-left: 30px;

      @include media-breakpoint-down(md) {
        border-left: none;
        padding-left: 0px;
      }
    }
  }
}
/* ... */

